# algolabra

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml
docs/: algoritmin_kuvaus.md  maarittely.md  ohje.md  testaus.md  toteutus.md  viikko1.md  viikko2.md  viikko3.md  viikko4.md
src/: condition.py  condition_calc.py  delaunay.py  det.py  edge.py  graphics.py  lab.py  labyrinth.py  labyrinth2.py  log_utils.py  planar_graph.py  playground.py  playground_room.py  point.py  point_generation.py  room_generation.py  search.py  shewchuk.py  test.py
src/c/: shewchuk.c
src/tests/: test_condition.py  test_condition_unit.py  test_conditional.py  test_delaunay.py  test_delaunay_invariant.py  test_edge_unit.py  test_planar_graph_invariant.py  test_planar_graph_unit.py  test_planargraph_unit.py
src/utils/: log_utils.py
