[project]
name = "algolabra"
version = "0.1.0"
description = ""
authors = [
    {name = "jussitus"}
]
license = {text = "GPL-2.0-only"}
readme = "README.md"
requires-python = "~=3.13.0"
dependencies = [
    "networkx (>=3.6.1,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pylint (>=4.0.5,<5.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]
