[project]
name = "algolabra"
version = "0.1.0"
description = ""
authors = [
    {name = "jussitus"}
]
license = {text = "GPL-2.0-only"}
readme = "README.md"
requires-python = "~=3.13.0"
dependencies = [
    "pillow (>=12.1.1,<13.0.0)",
    "tqdm (>=4.67.3,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pylint (>=4.0.5,<5.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "sympy (>=1.14.0,<2.0.0)"
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 20

[tool.ruff.lint]
select = ["D"]
ignore = ["D417"]

[tool.ruff.lint.pydocstyle]
convention = "google"
